# bb-cli

./: .actrc  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  dist-workspace.toml
.github/: dependabot.yml  oauth-build-setup.yml
.github/ISSUE_TEMPLATE/: epic.md  spec-issue.md
.github/workflows/: ci.yml  release.yml
crates/bb/: Cargo.toml  build.rs
crates/bb-api/: Cargo.toml
crates/bb-api/src/: client.rs  lib.rs  models.rs  testing.rs  transport.rs
crates/bb-config/: Cargo.toml
crates/bb-config/src/: lib.rs
crates/bb-core/: Cargo.toml
crates/bb-core/src/: context.rs  error.rs  http.rs  io.rs  lib.rs  traits.rs
crates/bb-git/: Cargo.toml
crates/bb-git/src/: lib.rs  runner.rs  url.rs
crates/bb/src/: auth.rs  browser.rs  cli.rs  config.rs  factory.rs  main.rs  output.rs  prompt.rs  refresh.rs  render.rs  testsupport.rs
crates/bb/src/api/: client.rs  mod.rs  models.rs  testing.rs  transport.rs
crates/bb/src/commands/: api.rs  browse.rs  completion.rs  config.rs  dash.rs  man.rs  mod.rs  search.rs  ssh_key.rs  variable.rs
crates/bb/src/commands/alias/: mod.rs
crates/bb/src/commands/auth/: git_credential.rs  login.rs  logout.rs  mod.rs  refresh.rs  setup_git.rs  status.rs  switch.rs  token.rs
crates/bb/src/commands/issue/: comment.rs  create.rs  edit.rs  list.rs  mod.rs  query.rs  view.rs
crates/bb/src/commands/pipeline/: list.rs  mod.rs  query.rs  run.rs  view.rs
crates/bb/src/commands/pr/: actions.rs  approve.rs  checkout.rs  checks.rs  close.rs  comment.rs  create.rs  diff.rs  edit.rs  finder.rs  list.rs  merge.rs  mod.rs  query.rs  render.rs  review.rs  status.rs  view.rs
crates/bb/src/commands/repo/: branch_restriction.rs  clone.rs  create.rs  default_reviewer.rs  delete.rs  deploy_key.rs  edit.rs  fork.rs  list.rs  mod.rs  set_default.rs  sync.rs  view.rs  webhook.rs
crates/bb/src/commands/snippet/: mod.rs
crates/bb/src/commands/workspace/: mod.rs
crates/bb/src/core/: context.rs  error.rs  http.rs  io.rs  mod.rs  repo.rs  traits.rs
crates/bb/src/git/: mod.rs  runner.rs  url.rs
crates/bb/src/tui/: app.rs  config.rs  keymap.rs  mod.rs  terminal.rs  worker.rs
crates/bb/tests/: cli.rs
specs/: 001-scaffold.md  002-config.md  003-api-client.md  004-git-repoid.md  005-auth-login.md  006-auth-status.md  007-pr-create.md  008-pr-list.md  009-pr-view.md  010-pr-diff.md  011-pr-merge.md  012-pr-decline.md  013-pr-approve.md  014-reviewers.md  015-pr-checkout.md  016-repo-view.md  017-repo-clone.md  018-repo-list.md  022-issue-list.md  023-issue-view.md  024-issue-create.md  025-issue-comment.md  026-pipeline-list.md  027-pipeline-view.md  028-pr-checks.md  029-browse.md  030-api.md  031-completion.md  032-man-pages.md  033-tui-service-extraction.md  034-tui-scaffold.md  035-tui-data-worker.md  036-tui-pr-list.md  037-tui-pr-detail.md  038-tui-pr-actions.md  039-tui-issues.md  040-tui-pipelines.md  041-tui-sections-filter.md  042-tui-config-theme-help.md  043-tui-custom-keybindings.md  (+29 more)
