[workspace]
resolver = "2"
members = [
    "crates/bb",
    "crates/bb-core",
    "crates/bb-api",
    "crates/bb-config",
    "crates/bb-git",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
repository = "https://github.com/volcmen/bb-cli"
authors = ["volcmen"]

[workspace.dependencies]
# internal crates
bb-core = { path = "crates/bb-core" }
bb-api = { path = "crates/bb-api" }
bb-config = { path = "crates/bb-config" }
bb-git = { path = "crates/bb-git" }

# external
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "json",
] }
inquire = { version = "0.7", features = ["editor"] }
etcetera = "0.8"
base64 = "0.22"
getrandom = "0.2"
which = "7"
url = "2"
regex = "1"
terminal_size = "0.4"
# pure-Rust jq (jaq 3.x line): load/Compiler/Ctx + jaq-json::Val
jaq-core = "3.1.0"
jaq-std = "3.0.1"
jaq-json = "2.0.1"

# dev
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
strip = true
lto = "thin"
