[package]
name = "bb-api"
description = "Bitbucket REST API client for bb-cli (Transport seam, models, pagination)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bb-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[features]
# Exposes the in-process FakeTransport test harness to downstream crates.
test-util = []

[lints]
workspace = true
