[package]
name = "bb-core"
description = "Kernel of bb-cli: DI seam traits, shared types, terminal IO, and Context."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
