[package]
name = "bb"
description = "bb — a Bitbucket CLI, a gh for Bitbucket."
default-run = "bb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bb"
path = "src/main.rs"

[dependencies]
bb-core.workspace = true
anyhow.workspace = true
clap.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true
