[package]
name = "bb"
description = "bb — a Bitbucket CLI, a gh for Bitbucket."
default-run = "bb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bb"
path = "src/main.rs"

[dependencies]
bb-core.workspace = true
bb-api.workspace = true
bb-config.workspace = true
bb-git.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
inquire.workspace = true
base64.workspace = true
getrandom.workspace = true
sha2.workspace = true
tinytemplate.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
jaq-core.workspace = true
jaq-std.workspace = true
jaq-json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
bb-api = { workspace = true, features = ["test-util"] }
bb-git = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
