[package]
name = "bb-cli"
description = "bb — a Bitbucket CLI, a gh for Bitbucket."
default-run = "bb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["bitbucket", "cli", "pull-request", "git", "gh"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "bb"
path = "src/main.rs"

[dependencies]
# CLI + UX
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
inquire.workspace = true
# serialization + output
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tinytemplate.workspace = true
jaq-core.workspace = true
jaq-std.workspace = true
jaq-json.workspace = true
# kernel / errors
thiserror.workspace = true
# api transport
reqwest.workspace = true
# auth (OAuth PKCE)
base64.workspace = true
getrandom.workspace = true
sha2.workspace = true
# git integration
which.workspace = true
# TUI dashboard (bb dash)
ratatui.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
# regex powers the StubRunner test harness (formerly bb-git's test-util feature)
regex.workspace = true

[lints]
workspace = true
